# eproc

./: .gitignore  CHANGELOG  LICENSE  README.md  flake.nix  ppad-eproc.cabal
bench/: Main.hs  Weight.hs
lib/Numeric/Eproc/: Bernoulli.hs  Bettor.hs  Bounded.hs  Common.hs  ConfSeq.hs  Mean.hs  Mixture.hs  Paired.hs  Test.hs  TwoSample.hs
lib/Numeric/Eproc/Bernoulli/: TwoSided.hs
lib/Statistics/: EProcess.hs
lib/Statistics/EProcess/: Bettor.hs  Mean.hs  TwoSample.hs
test/: Main.hs
