cabal-version:      3.0
name:               ppad-eproc
version:            0.1.0
synopsis:           Anytime-valid sequential testing via e-processes.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Statistics
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  Anytime-valid sequential hypothesis testing for bounded random
  variables, via the e-process / betting framework of Waudby-Smith and
  Ramdas (2024). Provides bounded-mean and paired two-sample tests
  with fixed-lambda, aGRAPA, and ONS bettors. Tests are valid under
  optional stopping.

flag llvm
  description: Use GHC's LLVM backend.
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git.ppad.tech/eproc.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  if flag(llvm)
    ghc-options: -fllvm -O2
  exposed-modules:
      Numeric.Eproc.Bettor
      Numeric.Eproc.Mean
      Numeric.Eproc.Paired
  build-depends:
      base >= 4.9 && < 5

test-suite eproc-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , ppad-eproc
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark eproc-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans
  if flag(llvm)
    ghc-options: -fllvm

  build-depends:
      base
    , criterion
    , deepseq
    , ppad-eproc

benchmark eproc-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans
  if flag(llvm)
    ghc-options: -fllvm

  build-depends:
      base
    , deepseq
    , ppad-eproc
    , weigh
